# Smoother

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  tests.yml
docs/smoother/: index.md  losses.md  weights.md
docs/smoother/models/: deconv.md  impute.md  index.md  losses.md  reduction.md  weights.md
docs/smoother/simulation/: gp.md  histology.md  index.md  utils.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  loss_design.rst  requirements.txt  usage.rst
docs/source/tutorials/: quickstart.rst  tutorial_dr.ipynb  tutorial_plot_dependency.ipynb  tutorial_sp_loss_design.ipynb
docs/source/tutorials/data/: DLPFC_151673_layer_annotation.txt
simulation/: 001a_c2l_gp.py  001b_donut2zone.py  001c_hist2zone.py  002_zone2counts.py  README.md  visualization.ipynb
smoother/: __init__.py  losses.py  utils.py  visualization.py  weights.py
smoother/models/: deconv.py  impute.py  losses.py  reduction.py  weights.py
smoother/models/reduction/: __init__.py  _spae.py  _spanvi.py  _spcpd.py  _spmultivi.py  _sppca.py  _spvae.py  _utils.py
smoother/simulation/: gp.py  histology.py  utils.py
tests/: test_losses.py  test_model_deconv.py  test_model_impute.py  test_model_spanvi.py  test_model_spmultivi.py  test_model_sppca.py  test_model_spvae.py  test_weights.py
tutorials/: tutorial_deconv.ipynb  tutorial_dr.ipynb
tutorials/data/: DLPFC_151673_coords.txt  DLPFC_151673_marker_log_exp_by_layer.txt  anno_layer_all.txt
