[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smoother-omics"
version = "1.0.3"
description = "A Unified and Modular Framework to Incorporate Structural Dependency in Spatial Omics Data"
authors = [
  {name = "Jiayu Su"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "<4"

dependencies = [
    "torch",
    "scipy",
    "scikit-learn",
    "pandas",
    "tqdm"
]

[project.urls]
repository = "https://github.com/JiayuSuPKU/Smoother"

[tool.setuptools]
packages.find = {where = ["."], exclude = ["simulation", "docs", "tests"]}